--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
+<!doctype html>
 <html>
-  <head>
-    Hello World!
-  </head>
+
+   <head>
+     <title> Alek Schaffer </title>
+   </head>  
+ 
+   <body>
+
+   <h2> Welcome To My Web Page </h2>
+    
+   
+   <h3> About Me </h3>
+        Alek Schaffer, Junior IT major at <a href="http://www.pointpark.edu">Point Park University</a>
+     <br>
+        I'm very active, I play basketball for Point Park University but I took this year off due
+        to focusing to academics.
+     <br>
+        In highschool I played football, basketball, track, baseball, and I would golf occasionally.
+     <br>
+        <img src="http://static.hudl.com/users/prod/2710501_bc92ecfcc29a415fb6c0458424235b16.jpg" 
+        height="175" width="175"/>
+     <br>
+
+   <h3> Interests </h3>
+     <ul>
+       <li> Computer wise, I like programming until I get stuck. </li>
+       <li> I like to hack computers only to test myself and improve my skills. </li>
+       <li> I love the beach, crab legs, and socializing </li>
+     </ul>
+
+   <h3> Contact Info </h3>
+     <ul>
+        <li>Cell Phone #: 724-859-2571</li>
+        <li>Email: adschaf@pointpark.edu</li>
+     </ul>
+
+  </body>
 </html>
 
