--- a/module2/index.html
+++ b/module2/index.html
@@ -2,12 +2,23 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <style>
+
+  </style>
   </head>
 
+
   <body>
-    <div>
+      <ul>
+        <li><a href="Index.html"> Home </a></li>
+        <li><a href="News.html"> Usability </a></li>
+        <li><a href="Contact.html"> Usability </a></li>
+        <li style="float: right"><a class="active" href="About.html"> About </a></li>
+      </ul>
+
       <h1 class="changecolor big"> Welcome to my homepage! </h1>
-      <h3> About Me </h3>
+      <h2> About Me </h2>
+      <p>
         Alek Schaffer, Junior IT major at <a href="http://www.pointpark.edu">Point Park University</a>
       <br>
         I'm very active, I play basketball for Point Park University but I took this year off due
@@ -17,16 +28,17 @@
       <br>
       <img src="http://static.hudl.com/users/prod/2710501_bc92ecfcc29a415fb6c0458424235b16.jpg"
         height="175" width="175"/>
+      </p>
 
-      <h3> Interests </h3>
-        <ul>
-          <li> Computer wise, I like programming until I get stuck. </li>
-          <li> I like to hack computers only to test myself and improve my skills. </li>
-          <li> I love the beach, crab legs, and socializing </li>
-        </ul>
+      <h2> Interests </h2>
+        <p class="two">
+          Computer wise, I like programming until I get stuck.
+          I like to hack computers only to test myself and improve my skills.
+          I love the beach, crab legs, and socializing.
+        </p>
 
       <h3> Class Schedule </h3>
-      <table>
+      <table align="center">
         <tr>
           <td> Monday </td>
           <td> Tuesday </td>
@@ -59,12 +71,14 @@
         </tr>
       </table>
 
-      <h3> Contact Info </h3>
-      <ul>
-        <li>Cell Phone #: 724-859-2571</li>
-        <li>Email: adschaf@pointpark.edu</li>
-        <li><a href="https://github.com/adschaf/homepage"> GitHub </a></li>
-      </ul>
+      <h2> Contact Info </h2>
+      <p class="three">
+        Cell Phone #: 724-859-2571
+        Email: adschaf@pointpark.edu"
+        <br>
+        My GitHub page: 
+        <a href="https://github.com/adschaf/homepage"> GitHub </a>
+      </p>
     </div>
     <div> Footer </div>
   </body>
