--- a/module2/index.html
+++ b/module2/index.html
@@ -11,8 +11,8 @@
   <body>
       <ul>
         <li><a href="Index.html"> Home </a></li>
-        <li><a href="News.html"> Usability </a></li>
-        <li><a href="Contact.html"> Usability </a></li>
+        <li><a href="News.html"> News </a></li>
+        <li><a href="Contact.html"> Contact </a></li>
         <li style="float: right"><a class="active" href="About.html"> About </a></li>
       </ul>
 
@@ -76,7 +76,7 @@
         Cell Phone #: 724-859-2571
         Email: adschaf@pointpark.edu"
         <br>
-        My GitHub page: 
+        My GitHub page:
         <a href="https://github.com/adschaf/homepage"> GitHub </a>
       </p>
     </div>
